# meshcore-for-bitcoiners

./: .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SPECS.md  handoff-20260626.md  makefile  meshcore-for-bitcoiners.tex  theme-handoff-cornerimage.md
.github/workflows/: build.yml  release.yml
decrypt-grp-msg/: .gitignore  README.md  messages.txt  pyproject.toml
decrypt-grp-msg/src/mcgrpdec/: __init__.py  candidates.py  cli.py  cpu.py  crypto.py  gpu.py  observer.py  packet.py
decrypt-grp-msg/src/mcgrpdec/shaders/: crack.wgsl
decrypt-grp-msg/tests/: test_crypto.py
decrypt-grp-msg/wordlists/: build_wordlist.py
generate-images/: generate_image.py  pyproject.toml
regions-map/: .gitignore  draw_regions.py  pyproject.toml
