[project]
name = "mcgrpdec"
version = "0.1.0"
description = "Decrypt / brute-force MeshCore group-channel (#hashtag room) messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42",
    "click>=8.1",
]

[project.optional-dependencies]
# GPU brute-force on the Intel iGPU via Vulkan (wgpu-native, no browser).
gpu = [
    "wgpu>=0.19",
    "numpy>=1.26",
]

[project.scripts]
mcgrpdec = "mcgrpdec.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcgrpdec"]
